--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/fetch-mock": "6.0.3",
+    "@types/jest": "^23.3.1",
     "fetch-mock": "6.5.2",
     "jest": "23.4.2",
     "rimraf": "2.6.2",
