chore: add semantic-release

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@moltin/request",
-  "version": "0.0.0-semantic-release",
+  "version": "0.0.0-development",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
@@ -12,7 +12,8 @@
     "build": "yarn clean && tsc -d",
     "clean": "rimraf dist",
     "prepublish": "yarn build",
-    "test": "jest"
+    "test": "jest",
+    "semantic-release": "semantic-release"
   },
   "dependencies": {
     "cross-fetch": "2.2.2"
@@ -23,10 +24,15 @@
     "fetch-mock": "6.5.2",
     "jest": "23.4.2",
     "rimraf": "2.6.2",
+    "semantic-release": "^15.9.3",
     "ts-jest": "23.0.1",
     "typescript": "3.0.1"
   },
   "publishConfig": {
     "access": "public"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/moltin/moltin-request.git"
   }
 }
