--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@moltin/request",
-  "version": "0.0.0-development",
+  "version": "0.0.0-semantic-release",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
