--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "node index.js"
+    "dev": "node index.js"
   },
   "dependencies": {
     "@moltin/request": "^1.4.2",
