--- a/examples/micro/package.json
+++ b/examples/micro/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "dependencies": {
-    "@moltin/request": "^1.4.2",
-    "micro": "^9.3.3"
+    "@moltin/request": "latest",
+    "micro": "latest"
   }
 }
