--- a/examples/express/package.json
+++ b/examples/express/package.json
@@ -4,8 +4,8 @@
     "dev": "node index.js"
   },
   "dependencies": {
-    "@moltin/request": "^1.4.2",
-    "express": "^4.16.4",
-    "pug": "^2.0.3"
+    "@moltin/request": "latest",
+    "express": "latest",
+    "pug": "latest"
   }
 }
