chore: update cli-app example deps

--- a/examples/cli-app/package.json
+++ b/examples/cli-app/package.json
@@ -7,8 +7,8 @@
     "cli": "node index.js"
   },
   "dependencies": {
-    "@moltin/request": "^1.4.2",
-    "meow": "^5.0.0",
-    "ora": "^3.0.0"
+    "@moltin/request": "latest",
+    "meow": "latest",
+    "ora": "latest"
   }
 }
