chore: remove tweedy from reviewers

--- a/renovate.json
+++ b/renovate.json
@@ -4,5 +4,5 @@
   "major": {
     "automerge": false
   },
-  "reviewers": ["notrab", "ynnoj", "craigtweedy"]
+  "reviewers": ["notrab", "ynnoj"]
 }
