--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,5 +9,5 @@
     "noUnusedLocals": true,
     "lib": ["es2015", "dom", "esnext"]
   },
-  "exclude": ["node_modules", "dist", "examples"]
+  "exclude": ["node_modules", "dist"]
 }
